Actually solved 9th task, solved 11th task